k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devopsapi-svc
  namespace: production
spec:
  selector:
    app: devopsapi             # cible les pods avec ce label
  ports:
  - port: 80
    targetPort: 8080
  type: ClusterIP              # interne au cluster seulement
